--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,127 @@
-streamlit
-openai
-requests
-streamlit_chat
-pandas
-numpy
-matplotlib
-altair
-streamlit_calendar
-openpyxl
-statsmodels
-streamlit_autorefresh
-streamlit_extras
-scikit-learn
-xlrd
-streamlit_js_eval
-plotly
+aiohttp==3.9.5
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.7.0
+anyio==4.4.0
+appdirs==1.4.4
+async-timeout==4.0.3
+attrs==23.2.0
+bcrypt==4.1.3
+beautifulsoup4==4.12.3
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+contourpy==1.2.1
+cycler==0.12.1
+decorator==5.1.1
+distro==1.9.0
+duckdb==1.0.0
+entrypoints==0.4
+et-xmlfile==1.1.0
+exceptiongroup==1.2.1
+extra-streamlit-components==0.1.71
+Faker==26.0.0
+favicon==0.7.0
+fonttools==4.53.0
+frozendict==2.4.4
+frozenlist==1.4.1
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.31.0
+google-auth-oauthlib==1.2.0
+gspread==5.12.4
+gspread-dataframe==4.0.0
+gspread-formatting==1.2.0
+gspread-pandas==3.3.0
+h11==0.14.0
+htbuilder==0.6.2
+html5lib==1.1
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+importlib-metadata==6.11.0
+importlib_resources==6.4.0
+Jinja2==3.1.4
+joblib==1.4.2
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+lxml==5.2.2
+Markdown==3.6
+markdown-it-py==3.0.0
+markdownlit==0.0.7
+MarkupSafe==2.1.5
+matplotlib==3.7.1
+mdurl==0.1.2
+more-itertools==10.3.0
+multidict==6.0.5
+multitasking==0.0.11
+numpy==1.24.2
+oauthlib==3.2.2
+openai==0.28.0
+openpyxl==3.1.5
+packaging==23.2
+pandas==2.0.2
+patsy==0.5.6
+peewee==3.17.5
+Pillow==9.5.0
+platformdirs==4.2.2
+plotly==5.22.0
+prometheus_client==0.20.0
+protobuf==4.25.3
+pyarrow==16.1.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydeck==0.9.1
+Pygments==2.18.0
+PyJWT==2.8.0
+pymdown-extensions==10.8.1
+Pympler==1.1
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0.1
+referencing==0.35.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.7.1
+rpds-py==0.18.1
+rsa==4.9
+scikit-learn==1.5.1
+scipy==1.11.1
+seaborn==0.13.2
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.5
+sql_metadata==2.12.0
+sqlparse==0.5.0
+st-annotated-text==4.0.1
+statsmodels==0.14.2
+streamlit==1.24.0
+streamlit-authenticator
+streamlit-autorefresh
+streamlit-calendar
+streamlit-card
+streamlit-chat
+tenacity==8.4.2
+threadpoolctl==3.5.0
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4.1
+tqdm==4.66.4
+typing_extensions==4.12.2
+tzdata==2024.1
+tzlocal==4.3.1
+urllib3==2.2.2
+validators==0.30.0
+webencodings==0.5.1
+xlrd==2.0.1
+yarl==1.9.4
+yfinance==0.2.40
+zipp==3.19.2
